add button works, initialize delimiter text, adjust hash algo descriptions,

--- a/props/default.properties
+++ b/props/default.properties
@@ -3,3 +3,6 @@ hashalgo.md5 = MD5
 hashalgo.sha1 = SHA-1
 hashalgo.sha256 = SHA-256
 hashalgo.sha512 = SHA-512
+hashalgo.default = hashalgo.sha256
+# Default delimiter
+delimiter.default = ;;
