added hash algo descriptions, basic user-friendly desc

--- a/props/language.properties
+++ b/props/language.properties
@@ -1,6 +1,6 @@
 # Hash Algo Descriptions
-hashalgo.description.md5 = (Legacy 0) Faster on some older systems. Offers decent performance with moderate security.
-hashalgo.description.sha1 = (Legacy 1) Faster on some older systems. Offers decent performance with moderate security.
-hashalgo.description.sha256 = // Recommended // Best mix of good performance and security.
-hashalgo.description.sha512 = (Paranoid) Maximum security, at the cost of performance.
+hashalgo.description.md5 = [Legacy 0] Faster on some older systems. Offers decent performance with moderate security.
+hashalgo.description.sha1 = [Legacy 1] Faster on some older systems. Offers decent performance with moderate security.
+hashalgo.description.sha256 = [Recommended] Best mix of good performance and security.
+hashalgo.description.sha512 = [Paranoid] Maximum security, at the cost of performance.
 addbutton.directorychooser.title = Choose A Directory
