added basic hashing functionality

--- a/props/default.properties
+++ b/props/default.properties
@@ -6,3 +6,5 @@ hashalgo.sha512 = SHA-512
 hashalgo.default = hashalgo.sha256
 # Default delimiter
 delimiter.default = ;;
+# Default buffer size
+buffer.size = 16384
