added file scanning ability, updates table during runtime

--- a/props/default.properties
+++ b/props/default.properties
@@ -8,3 +8,9 @@ hashalgo.default = hashalgo.sha256
 delimiter.default = ;;
 # Default buffer size
 buffer.size = 16384
+# Size Column notation
+#   Supported: B, KB, MB, GB, TB
+file.size.notation = KB
+# Size Column Precision
+#   How many decimal places
+file.size.precision = 2
